Its good to see some output about network internals

--- a/SegmentationTest.ipynb
+++ b/SegmentationTest.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,17 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "net initialized in 1.1125411987304688 seconds.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from segnet_utils import segmentationBuffers\n",
     "from collections import namedtuple\n",
@@ -84,7 +76,7 @@
     "image_processed = ipywidgets.Image(format='jpeg', width=camera.width, height=camera.height)\n",
     "\n",
     "debug_out = ipywidgets.Textarea(value=\"-\"*80, disabled=True,\n",
-    "                               layout=ipywidgets.Layout(width='1280px'))\n",
+    "                               layout=ipywidgets.Layout(width='1280px', height='520px'))\n",
     "images_out = ipywidgets.HBox([image_original, image_processed])\n",
     "alpha_slider = ipywidgets.IntSlider(value=150, min=0, max=255,\n",
     "                                    description='overlay alpha',\n",
@@ -158,8 +150,25 @@
     "        jetson.utils.cudaOverlay(buffers.overlay, buffers.composite, 0, 0)\n",
     "        jetson.utils.cudaOverlay(buffers.mask, buffers.composite, buffers.overlay.width, 0)\n",
     "\n",
-    "    fps = 1.0 / (time.time() - tic )\n",
-    "    debug_out.value = 'fps {}\\nnet fps {}'.format(fps, net.GetNetworkFPS())\n",
+    "    fps = 1.0 / (time.time() - tic)\n",
+    "    \n",
+    "    net.Mask(buffers.class_mask, buffers.grid_width, buffers.grid_height)\n",
+    "    class_histogram, _ = np.histogram(buffers.class_mask_np, buffers.num_classes)\n",
+    "    _s_fps = 'fps: {}'.format(fps)\n",
+    "    _s_nfps ='net fsp: {}'.format(net.GetNetworkFPS())\n",
+    "    _s_grid = 'grid size: {:d}x{:d}'.format(buffers.grid_width, buffers.grid_height)\n",
+    "    _s_ccount = 'class count: {:d}'.format(buffers.num_classes)\n",
+    "    _s_rows = [_s_fps, _s_nfps, _s_grid, _s_ccount,\n",
+    "               '-----------------------------------------',\n",
+    "               ' ID  class name         count          % ',\n",
+    "               '-----------------------------------------']\n",
+    "    for n in range(buffers.num_classes):\n",
+    "        percentage = float(class_histogram[n]) / float(buffers.grid_width * buffers.grid_height)\n",
+    "        _s_rows.append(' {:>2d}  {:<20s} {:>3d}   {:f}'.format(n,\n",
+    "                                                               net.GetClassDesc(n),\n",
+    "                                                               class_histogram[n],\n",
+    "                                                               percentage))\n",
+    "    debug_out.value = '\\n'.join(_s_rows)\n",
     "\n",
     "    image_processed.value = cudaimg_to_jpeg(buffers.output, camera.width, camera.height)"
    ]
