Visualize some internals, just for fun

--- a/SegmentationTest.ipynb
+++ b/SegmentationTest.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,9 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "net initialized in 18.569501876831055 seconds.\n"
+     ]
+    }
+   ],
    "source": [
     "from segnet_utils import segmentationBuffers\n",
     "from collections import namedtuple\n",
@@ -63,12 +71,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can use plotly to visualise internals like object type histogram in this example.\n",
+    "Matplotlib appeared to be way too sluggish to be updated in real time loops."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import os.path\n",
+    "import plotly.graph_objects as plt_go\n",
+    "# TODO: move this to library\n",
+    "class HistogramPlot:\n",
+    "    # plots item histogram, skipping background (0)\n",
+    "    def __init__(self, nnet, freq_secs=1):\n",
+    "        #get colors from colors file associated to network\n",
+    "        colors = open(os.path.join(os.path.dirname(nnet.GetModelPath()), 'colors.txt'),'r').readlines()[1:]\n",
+    "        colors = ['rgb({})'.format(','.join(c.strip().split())) for c in colors]\n",
+    "\n",
+    "        self._classes = nnet.GetNumClasses() - 1 # we skip background here\n",
+    "        self._labels = [nnet.GetClassDesc(i+1) for i in range(0, self._classes)]\n",
+    "        self._update_freq = freq_secs\n",
+    "        self._tic = time.time()\n",
+    "        self._n = 0\n",
+    "        self._buffer = np.zeros((self._classes,), dtype=int)\n",
+    "        self.fig_out = plt_go.FigureWidget(data=[plt_go.Bar(x=self._labels,\n",
+    "                                                       y=np.zeros((self._classes,), dtype=int),\n",
+    "                                                      marker_color=colors)],\n",
+    "                                           layout={'yaxis':  {\n",
+    "                                                              'range': [0, math.log(\n",
+    "                                                                           nnet.GetGridWidth() *\n",
+    "                                                                           nnet.GetGridHeight(), 10)],\n",
+    "                                                             'type': 'log',\n",
+    "                                                            }}\n",
+    "                                          )\n",
+    "        \n",
+    "    def update(self, data):\n",
+    "        # display averages over update frequence\n",
+    "        self._buffer = np.add(self._buffer, data[1:])\n",
+    "        self._n += 1\n",
+    "        if time.time() - self._tic >= self._update_freq:\n",
+    "            self._tic = time.time()\n",
+    "            with self.fig_out.batch_animate(duration=150):\n",
+    "                self.fig_out.data[0].y = self._buffer / (self._n or 1)\n",
+    "            self._buffer = np.zeros((self._classes,), dtype=int)\n",
+    "            self._n = 0\n",
+    "\n",
+    "histogram_out = HistogramPlot(net)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Lets use ipywidgets sidecar to display both original camera input and output from network, with some controls and debug data output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +140,7 @@
     "image_processed = ipywidgets.Image(format='jpeg', width=camera.width, height=camera.height)\n",
     "\n",
     "debug_out = ipywidgets.Textarea(value=\"-\"*80, disabled=True,\n",
-    "                               layout=ipywidgets.Layout(width='1280px', height='520px'))\n",
+    "                               layout=ipywidgets.Layout(width='640px', height='520px'))\n",
     "images_out = ipywidgets.HBox([image_original, image_processed])\n",
     "alpha_slider = ipywidgets.IntSlider(value=150, min=0, max=255,\n",
     "                                    description='overlay alpha',\n",
@@ -99,7 +163,8 @@
     "                            select_overlay,\n",
     "                            alpha_slider,\n",
     "                            select_filter])\n",
-    "all_box = ipywidgets.VBox([images_out, ctrl_box, debug_out])\n",
+    "misc_box = ipywidgets.HBox([debug_out, histogram_out.fig_out])\n",
+    "all_box = ipywidgets.VBox([images_out, ctrl_box, misc_box])\n",
     "_sidecar = Sidecar(title='output')\n",
     "with _sidecar:\n",
     "    display(all_box)"
@@ -150,12 +215,13 @@
     "        jetson.utils.cudaOverlay(buffers.overlay, buffers.composite, 0, 0)\n",
     "        jetson.utils.cudaOverlay(buffers.mask, buffers.composite, buffers.overlay.width, 0)\n",
     "\n",
-    "    fps = 1.0 / (time.time() - tic)\n",
-    "    \n",
     "    net.Mask(buffers.class_mask, buffers.grid_width, buffers.grid_height)\n",
     "    class_histogram, _ = np.histogram(buffers.class_mask_np, buffers.num_classes)\n",
+    "    histogram_out.update(class_histogram)\n",
+    "    fps = 1.0 / (time.time() - tic)\n",
+    "        \n",
     "    _s_fps = 'fps: {}'.format(fps)\n",
-    "    _s_nfps ='net fsp: {}'.format(net.GetNetworkFPS())\n",
+    "    _s_nfps ='net fps: {}'.format(net.GetNetworkFPS())\n",
     "    _s_grid = 'grid size: {:d}x{:d}'.format(buffers.grid_width, buffers.grid_height)\n",
     "    _s_ccount = 'class count: {:d}'.format(buffers.num_classes)\n",
     "    _s_rows = [_s_fps, _s_nfps, _s_grid, _s_ccount,\n",
@@ -174,6 +240,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fps 18.48509047959031 network fps 34.88182067871094\n"
+     ]
+    }
+   ],
+   "source": [
+    "# with this setup frame rate stays bearable\n",
+    "print('fps', fps, 'network fps', net.GetNetworkFPS())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -184,20 +268,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "del camera\n",
     "del net"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
